manifests/apps/micro-service-101/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: micro-service-101
  name: micro-service-101
spec:
  selector:
    app: micro-service-101
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
