manifests/apps/micro-service-101/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-service-101
  namespace: micro-service-101
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/hi
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internal"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - mukesh'
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/hi
        pathType: Prefix
        backend:
          service:
            name: micro-service-101
            port:
              number: 8080
